...
    },
    "キャンセル" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "キャンセル"
...
    },
    "後で" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Not Now"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "後で"
...
